infrastructure/dev-server-for-petclinic-cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This cloudformation template prepares development environmet for petclinic microservices app
  User needs to select appropiate key name when launcihng the template.
Parameters:
  KeyPairName:
    Description: Enter the name of your key Pair for SSH connection
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be one of the existing EC2 keypair
 
Resources:
  PetClinicSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP and SSH for petclinic microservices #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0  
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7979
          ToPort: 7979
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8083
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8761
          ToPort: 8761
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8888
          ToPort: 8888
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9091
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9411
          ToPort: 9411
          CidrIp: 0.0.0.0/0

  PetClinicLT:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        ImageId: 
        InstanceType: t2.medium
        KeyName: !Ref KeyPairName
        SecurityGroupIds:
          - !GetAtt PetClinicSG.GroupId
        UserData: 
        Fn::Base64: |
        #! /bin/bash
        yum update -y
        hostnamectl set-hostname petclinic-dev-server
        amazon-linux-extras install docker -y
        systemctl start docker
        systemctl enable docker
        usermod -a -G docker ec2-user
        newgrp docker
        curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
        -o /usr/local/bin/docker-compose
        chmod +x /usr/local/bin/docker-compose
        yum install git -y
        yum install java-11-amazon-corretto -y
        git clone https://github.com/barisbab/petclinic-microservices.git
        cd petclinic-microservices
        git fetch
        git checkout dev
  PetClinicServer:
    Type: "AWS::EC2::Instance"
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref PetClinicLT
        Version: !GetAtt PetClinicLT.LatestVersionNumber
      Tags:
        - Key: Name
          Value: !Sub Petclinic App Dev Server ${AWS::StackName}
  
Outputs:
  PetClinicDNSName:
    Description: Petclinic App Url
    Value: !GetAtt PetClinicServer.PublicDnsName
